--- a/views/admin/userList.ejs
+++ b/views/admin/userList.ejs
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <style>
         body {
             font-family:  sans-serif;
@@ -168,11 +170,9 @@
                                     <td><%=user.addresses[index].phone %></td>
                                     <td><%=user.addresses[index].state %></td>
                                     <td> 
-                                        <a href="/admin/toggleUserState/<%=encodeURIComponent( user._id) %>" onclick="return confirm('Are you sure you want to <%= user.isBlocked ? 'unblock' : 'block' %> this user?')">
-                                            <button class="btn btn-primary" style="background-color: #4D869C;color: #EEF7FF;">
-                                                <%= user.isBlocked ? 'Unblock' : 'Block' %>
-                                            </button>
-                                        </a>
+                                        <button class="btn btn-primary" style="background-color: #4D869C;color: #EEF7FF;" onclick="toggleUserState('<%= user._id %>', <%= user.isBlocked %>)">
+                                            <%= user.isBlocked ? 'Unblock' : 'Block' %>
+                                        </button>
                                     </td>
                                 </tr>
                                <% }) %>
@@ -307,7 +307,70 @@
             }
         }
     
+
+
+
+
+        
+
+    async function toggleUserState(userId, isBlocked) {
+        const action = isBlocked ? 'unblock' : 'block';
+        const result = await Swal.fire({
+            title: `Are you sure you want to ${action} this user?`,
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonText: 'Yes',
+            cancelButtonText: 'No'
+        });
+
+        if (result.isConfirmed) {
+            try {
+                const response = await fetch(`/admin/toggleUserState/${encodeURIComponent(userId)}`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                });
+
+                if (response.ok) {
+                    Swal.fire({
+                        title: 'Success!',
+                        text: `User has been ${action}ed.`,
+                        icon: 'success'
+                    }).then(() => {
+                        location.reload();
+                    });
+                } else {
+                    Swal.fire({
+                        title: 'Error!',
+                        text: 'Something went wrong. Please try again.',
+                        icon: 'error'
+                    });
+                }
+            } catch (error) {
+                Swal.fire({
+                    title: 'Error!',
+                    text: 'Something went wrong. Please try again.',
+                    icon: 'error'
+                });
+            }
+        }
+    }
+
+
+
+
+
+
+
+
+
+
+
         displayTablePage(1);
+
+
+
     </script>
   
 </body>
