--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -194,8 +194,13 @@
                     </li>
                     <li>
                       <a href="#"
-                        >Shipping <span>Flat rate: ₹0.00</span></a
+                        >Shipping <span>Free</span></a
                       >
+                    </li>
+                    <li>
+                       <a href="#">
+                         Coupon <span>: not applied</span>
+                       </a>
                     </li>
                     <li>
                       <!-- <input type="hidden" name="shippingCost" value="0"> -->
